intrusion-prevention/priv-esc/pod_test_allow.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-pod
  namespace: opa-test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      allowPrivilegeEscalation: false
