intrusion-prevention/priv-esc/pod_test_deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blocked-pod
  namespace: opa-test
spec:
  containers:
  - name: nginx
    image: nginx:latest
    securityContext:
      allowPrivilegeEscalation: true
